# python-pokemon-firered-battle-simulator

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  abilities.py  battle_ai_switch_items.py  battle_main.py  battle_moves.py  battle_script_commands.py  items.py  pokemon.py  pyproject.toml  simulate.py
core/: battle.py  battle_ai_switch_items.py  battle_constants.py  battle_main.py  battle_script_commands.py  battle_util.py  pokemon.py
