[tool.poetry]
name = "python-pokemon-firered-battle-simulator"
version = "0.1"
description = "Python Pokemon Firered battle simulator"
authors = [
    "Rodrigo Azevedo",
]

[tool.poetry.dependencies]
python = "~=3.9"

[tool.poetry.dev-dependencies]
isort = "~=5.7"
black = "==22.3.0"
pytest = "~=7.0.0"

[build-system]
requires = ["poetry_core==1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["venv", "tests"]
skips = []
